# blood-scan-pro

./: Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env-example  cmd.sh  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  static_values.py
backend/app/routers/reader/: enums.py  models.py  reader.py  utils.py
frontend/: package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/chat/: FileUpload.tsx  IFileUpload.ts
